--- a/Destinations/dest.css
+++ b/Destinations/dest.css
@@ -13,8 +13,8 @@
     display: block;
     width: 90%;
     height: 90%;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 0;
+    margin-left: -10px;
 }
 
 .map{
@@ -23,7 +23,7 @@
 }
 
 .map_name{
-    margin-left: -60px;
+    margin-left: -50px;
 }
 
 .bd-placeholder-img {
