--- a/signup/signup.css
+++ b/signup/signup.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-image:url("../images/home1.jpg");
+    background-image:url("../images/signupbg.webp");
     background-size: cover;
 }
 
