--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,22 +53,22 @@
   width: 100%;
 }
 
-#carouselExampleCaptions .carousel-item img{
+.carousel-item img{
   object-fit: cover;
   object-position: center;
   width: 100%;
-  height: fit-content;
+  height:100%;
   overflow: hidden;
 }
 
-#carouselExampleCaptions .carousel-item:before{
+.carousel-item:before{
   content:"";
   background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.7));
   display: block;
   position: absolute;
   top:0;
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
 }
 
 .btc{
@@ -79,4 +79,8 @@
 
 .card-body{
   margin-left: -30px;
+}
+
+.content{
+  padding-bottom: 50px !important;
 }
